--- a/src/views/start/donate.ejs
+++ b/src/views/start/donate.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NakamaStream - Donaciones</title>
-    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Font Awesome -->
@@ -171,23 +171,7 @@
         </div>
     </div>
 
-    <footer class="bg-white shadow-md py-10">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col items-center">
-                <div class="flex items-center space-x-4 mb-6">
-                    <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream_Logo" class="h-12">
-                    <p class="text-gray-600">NakamaStream version: 1.0.3</p>
-                </div>
-                <ul class="flex flex-wrap justify-center space-x-4 mb-6">
-                    <li><a href="/" class="text-gray-700 hover:text-primary transition-colors duration-200">Inicio</a></li>
-                    <li><a href="/tos" class="text-gray-700 hover:text-primary transition-colors duration-200">Términos de Uso</a></li>
-                    <li><a href="/privacy" class="text-gray-700 hover:text-primary transition-colors duration-200">Política de Privacidad</a></li>
-                </ul>
-                <img src="https://github.com/NakamaStream/Resources/blob/main/Sstudiosdev-removebg%20(1).png?raw=true" alt="Logo del Patrocinador" class="h-8 mb-6">
-                <p class="text-gray-600 text-center">© 2024 NakamaStream - Ningún vídeo se encuentra alojado en nuestros servidores.</p>
-            </div>
-        </div>
-    </footer>
+    <%- include('../components/footer') %>
 
     <script src="/src/public/js/tabs.js"></script>
 </body>
