--- a/src/views/anime/episode-detail.ejs
+++ b/src/views/anime/episode-detail.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= anime.name %> - <%= episode.title %></title>
-    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/public/css/anime-list.css">
@@ -55,7 +55,7 @@
                 <a href="/news" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                   Noticias
                 </a>
-                <a href="/soon" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+                <a href="/calendario" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
                   Calendario
                 </a>
               </div>
@@ -147,6 +147,12 @@
 
             <section class="max-w-4xl mx-auto mb-8 bg-white rounded-lg shadow-md p-6 transition-colors duration-300">
                 <h3 class="text-xl font-semibold anime-title mb-4">Comentarios</h3>
+
+                <!-- TEMP -->
+                <p class="mt-4 text-sm text-gray-500">
+                    <strong>Nota:</strong> La función de añadir fotos por URL está disponible solo en el chat global del anime, no en los comentarios de este episodio.
+                </p>
+
                 <% if (typeof user !== 'undefined' && user) { %>
                 <form id="comment-form" class="mb-4">
                     <textarea id="comment-content" class="w-full p-2 border rounded" rows="4" placeholder="Escribe tu comentario..."></textarea>
